// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionList works for multiple subscriptions active in a channel 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "<#C01234> is subscribed to 2 repositories",
      "text": "<https://github.com/atom/atom|atom/atom>
<https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
      "title": "<#C01234> is subscribed to these repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "<#C01234> is subscribed to 0 accounts",
      "text": "no accounts",
      "title": "<#C01234> is subscribed to these accounts",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`SubscriptionList works for no subscriptions active in a channel 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "<#C01234> is subscribed to 0 repositories",
      "text": "no repositories",
      "title": "<#C01234> is subscribed to these repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "<#C01234> is subscribed to 0 accounts",
      "text": "no accounts",
      "title": "<#C01234> is subscribed to these accounts",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`SubscriptionList works for one subscription active in a channel 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "<#C01234> is subscribed to 1 repository",
      "text": "<https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
      "title": "<#C01234> is subscribed to these repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "<#C01234> is subscribed to 0 accounts",
      "text": "no accounts",
      "title": "<#C01234> is subscribed to these accounts",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`SubscriptionList works for one subscription active in a direct message 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 1 repository",
      "text": "<https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
      "title": "Subscribed to these repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 0 accounts",
      "text": "no accounts",
      "title": "Subscribed to these accounts",
    },
  ],
  "response_type": "in_channel",
}
`;
